; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/fuse/extr_inode.c_fuse_send_forget.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/fuse/extr_inode.c_fuse_send_forget.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.fuse_conn = type { i32 }
%struct.fuse_req = type { %struct.TYPE_7__, %struct.TYPE_8__ }
%struct.TYPE_7__ = type { i32, %struct.TYPE_6__*, %struct.TYPE_5__ }
%struct.TYPE_6__ = type { i32, %struct.fuse_forget_in* }
%struct.fuse_forget_in = type { i8* }
%struct.TYPE_5__ = type { i8*, i32 }
%struct.TYPE_8__ = type { %struct.fuse_forget_in }

@FUSE_FORGET = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @fuse_send_forget(%struct.fuse_conn* %0, %struct.fuse_req* %1, i8* %2, i8* %3) #0 {
  %5 = alloca %struct.fuse_conn*, align 8
  %6 = alloca %struct.fuse_req*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca %struct.fuse_forget_in*, align 8
  store %struct.fuse_conn* %0, %struct.fuse_conn** %5, align 8
  store %struct.fuse_req* %1, %struct.fuse_req** %6, align 8
  store i8* %2, i8** %7, align 8
  store i8* %3, i8** %8, align 8
  %10 = load %struct.fuse_req*, %struct.fuse_req** %6, align 8
  %11 = getelementptr inbounds %struct.fuse_req, %struct.fuse_req* %10, i32 0, i32 1
  %12 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %11, i32 0, i32 0
  store %struct.fuse_forget_in* %12, %struct.fuse_forget_in** %9, align 8
  %13 = load i8*, i8** %8, align 8
  %14 = load %struct.fuse_forget_in*, %struct.fuse_forget_in** %9, align 8
  %15 = getelementptr inbounds %struct.fuse_forget_in, %struct.fuse_forget_in* %14, i32 0, i32 0
  store i8* %13, i8** %15, align 8
  %16 = load i32, i32* @FUSE_FORGET, align 4
  %17 = load %struct.fuse_req*, %struct.fuse_req** %6, align 8
  %18 = getelementptr inbounds %struct.fuse_req, %struct.fuse_req* %17, i32 0, i32 0
  %19 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %18, i32 0, i32 2
  %20 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %19, i32 0, i32 1
  store i32 %16, i32* %20, align 8
  %21 = load i8*, i8** %7, align 8
  %22 = load %struct.fuse_req*, %struct.fuse_req** %6, align 8
  %23 = getelementptr inbounds %struct.fuse_req, %struct.fuse_req* %22, i32 0, i32 0
  %24 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %23, i32 0, i32 2
  %25 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %24, i32 0, i32 0
  store i8* %21, i8** %25, align 8
  %26 = load %struct.fuse_req*, %struct.fuse_req** %6, align 8
  %27 = getelementptr inbounds %struct.fuse_req, %struct.fuse_req* %26, i32 0, i32 0
  %28 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %27, i32 0, i32 0
  store i32 1, i32* %28, align 8
  %29 = load %struct.fuse_req*, %struct.fuse_req** %6, align 8
  %30 = getelementptr inbounds %struct.fuse_req, %struct.fuse_req* %29, i32 0, i32 0
  %31 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %30, i32 0, i32 1
  %32 = load %struct.TYPE_6__*, %struct.TYPE_6__** %31, align 8
  %33 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %32, i64 0
  %34 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %33, i32 0, i32 0
  store i32 8, i32* %34, align 8
  %35 = load %struct.fuse_forget_in*, %struct.fuse_forget_in** %9, align 8
  %36 = load %struct.fuse_req*, %struct.fuse_req** %6, align 8
  %37 = getelementptr inbounds %struct.fuse_req, %struct.fuse_req* %36, i32 0, i32 0
  %38 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %37, i32 0, i32 1
  %39 = load %struct.TYPE_6__*, %struct.TYPE_6__** %38, align 8
  %40 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %39, i64 0
  %41 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %40, i32 0, i32 1
  store %struct.fuse_forget_in* %35, %struct.fuse_forget_in** %41, align 8
  %42 = load %struct.fuse_conn*, %struct.fuse_conn** %5, align 8
  %43 = load %struct.fuse_req*, %struct.fuse_req** %6, align 8
  %44 = call i32 @fuse_request_send_noreply(%struct.fuse_conn* %42, %struct.fuse_req* %43)
  ret void
}

declare dso_local i32 @fuse_request_send_noreply(%struct.fuse_conn*, %struct.fuse_req*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
